<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtResultCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/zero"
        android:textSize="40sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/seven"
            android:textSize="14sp" />

        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/eight"
            android:textSize="14sp" />

        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/nine"
            android:textSize="14sp" />

        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/divide"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:onClick="handleClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="14sp"
            android:layout_marginHorizontal="5dp"
            />
    </LinearLayout>

</LinearLayout>